--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,16 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+ 
+# ============ #
+# OS generated #
+# ============ #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
